WebShop.API/src/main/java/com/example/webshopapi/error/exception/CouponExpiredException.java
package com.example.webshopapi.error.exception;

public class CouponExpiredException extends RuntimeException {
    public CouponExpiredException(String message) {
        super(message);
    }
}